--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "node.js",
+"node.js",
     "express",
-    "jwt",
+        "jwt",
     "authentication",
     "mongodb"
   ],
