--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [
-"node.js",
+    "node.js",
     "express",
-        "jwt",
+    "jwt",
     "authentication",
     "mongodb"
   ],
